[package]
name = "spotify-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
derive = "1.0.0"
env_logger = "0.11.3"
features = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
rouille = "3.6.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.38.0", features = ["full"] }
url = "2.4.1"
uuid = { version = "1.5.0", features = ["v4"] }
webbrowser = "0.8.12"
